--- a/laudo.html
+++ b/laudo.html
@@ -41,6 +41,7 @@
     border-radius:6px;
   }
   .btn-print{ background:#28a745;color:#fff; }
+  .btn-word{ margin-top:10px;background:#1f6feb;color:#fff; }
   .btn-clear{ margin-top:10px;background:#eee; }
 
   /* ===== FOLHA ===== */
@@ -233,7 +234,6 @@
     body{ background:#fff; padding:0; }
     .controles{ display:none !important; }
 
-    /* ✅ remove min-height só no print pra não criar folha em branco */
     .folha{
       box-shadow:none;
       width:100%;
@@ -473,11 +473,11 @@
 <!-- ✅ BOTÕES -->
 <div class="controles no-print">
   <button class="btn btn-print" onclick="imprimirLaudo()">IMPRIMIR / SALVAR PDF</button>
+  <button class="btn btn-word" onclick="abrirLaudoWord()">ABRIR PARA COPIAR NO WORD</button>
   <button class="btn btn-clear" onclick="location.reload()">LIMPAR</button>
 </div>
 
 <script>
-  function onlyDigits(s){ return (s||"").replace(/\D/g,''); }
   function up(v){ return (v||"").toUpperCase().trim(); }
   function sanitizeFileName(name){
     return (name||"").replace(/[\\/:*?"<>|]/g, "").replace(/\s+/g, " ").trim();
@@ -592,7 +592,101 @@
     }
   }
 
-  // ===== Exportação no padrão do sistema =====
+  /* ==========================================================
+     ✅ POPUP WORD COM CÓPIA AUTOMÁTICA
+  ========================================================== */
+  function abrirLaudoEmJanelaWord(laudoHTML, titulo = "Laudo - Copiar para Word"){
+    const w = window.open("", "_blank", "width=900,height=700,scrollbars=yes,resizable=yes");
+    if(!w){
+      alert("Pop-up bloqueado! Permita pop-ups para este site.");
+      return;
+    }
+
+    w.document.open();
+    w.document.write(`
+      <!DOCTYPE html>
+      <html lang="pt-BR">
+      <head>
+        <meta charset="UTF-8" />
+        <title>${titulo}</title>
+        <style>
+          body{ font-family: Arial, sans-serif; padding:20px; background:#f6f6f6; }
+          .topo{ display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-bottom:14px; }
+          button{ padding:10px 14px; border:0; border-radius:10px; font-weight:800; cursor:pointer; }
+          .btnCopiar{ background:#2e7d32; color:#fff; }
+          .btnFechar{ background:#b71c1c; color:#fff; }
+          .btnSelecionar{ background:#1f6feb; color:#fff; }
+          .card{
+            background:#fff;
+            border:1px solid #ddd;
+            border-radius:14px;
+            padding:18px;
+            line-height:1.5;
+            font-size:14px;
+          }
+          .aviso{
+            margin-left:auto;
+            font-size:12px;
+            opacity:0.85;
+          }
+        </style>
+      </head>
+      <body>
+        <div class="topo">
+          <button class="btnCopiar" onclick="copiar()">📋 Copiar novamente</button>
+          <button class="btnSelecionar" onclick="selecionar()">🖱️ Selecionar tudo</button>
+          <button class="btnFechar" onclick="window.close()">✖ Fechar</button>
+          <span class="aviso" id="msg"></span>
+        </div>
+
+        <div id="laudo" class="card">${laudoHTML}</div>
+
+        <script>
+          function selecionar(){
+            const el = document.getElementById('laudo');
+            const range = document.createRange();
+            range.selectNodeContents(el);
+            const sel = window.getSelection();
+            sel.removeAllRanges();
+            sel.addRange(range);
+          }
+
+          function copiar(){
+            selecionar();
+            try{
+              document.execCommand('copy');
+              window.getSelection().removeAllRanges();
+              document.getElementById('msg').textContent = "✅ Laudo copiado! Agora cole no Word (Ctrl+V).";
+            }catch(e){
+              document.getElementById('msg').textContent = "⚠️ Não consegui copiar automaticamente. Use Ctrl+C.";
+            }
+          }
+
+          // ✅ copia automaticamente ao abrir
+          window.onload = function(){
+            setTimeout(copiar, 250);
+          }
+        <\/script>
+      </body>
+      </html>
+    `);
+    w.document.close();
+  }
+
+  function montarLaudoHTMLWord(){
+    atualizar();
+    const bloco = document.querySelector(".print-only");
+    const clone = bloco.cloneNode(true);
+    clone.style.display = "block";
+    return clone.innerHTML;
+  }
+
+  function abrirLaudoWord(){
+    const html = montarLaudoHTMLWord();
+    abrirLaudoEmJanelaWord(html, `Laudo ${init.exame} - ${init.paciente}`);
+  }
+
+  // ===== Exportação no padrão do sistema (MANTIDO) =====
   function mesChaveAtual(){
     const now = new Date();
     const yyyy = now.getFullYear();
@@ -643,7 +737,6 @@
     if(window.history.length > 1){ window.history.back(); return; }
   }
 
-  // ✅ IMPRIMIR (sugere nome + exporta + volta)
   function imprimirLaudo(){
     atualizar();
 
@@ -678,7 +771,10 @@
   }
 
   window.atualizar = atualizar;
+  window.abrirLaudoWord = abrirLaudoWord;
 </script>
 
 </body>
 </html>
+
+
